--- a/index.html
+++ b/index.html
@@ -9,7 +9,20 @@
 </head>
 <body>
     <header class="header">
-
+<nav class="nav">
+    <ul class="menu">
+        <li><a href="">About Us</a>
+        </li>
+        <li><a href="">Portfolio</a>
+        </li>
+        <li><a href="">Company</a>
+        </li>
+        <li><a href="">Blog</a>
+        </li>
+        <li><a href="">Contact</a>
+        </li>
+    </ul>
+</nav>
     </header>
     <main class="main">
 
